--- a/simple-board/src/main/resources/templates/article/index.html
+++ b/simple-board/src/main/resources/templates/article/index.html
@@ -2,72 +2,116 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>게시판 페이지</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="/css/article-index.css" rel="stylesheet"/>
 </head>
-<body>
+<body class="container">
 <header id="header"></header>
 
 <main>
-    <form>
-        <label>
-            <select name="search-type">
-                <option>제목</option>
-                <option>본문</option>
-                <option>해시태그</option>
-                <option>작성자</option>
-                <option>작성일시</option>
-            </select>
-        </label>
-        <input type="text" placeholder="검색어 입력"/>
-        <button type="submit">검색</button>
-    </form>
+    <!-- search bar -->
+    <div class="card search-form">
+        <div class="card-body p-0">
+            <form id="search-form">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row no-gutters">
+                            <div class="col-lg-3 col-md-3 col-sm-12 p-0"><select class="form-control"
+                                                                                 id="exampleFormControlSelect1">
+                                <option>제목</option>
+                                <option>본문</option>
+                                <option>해시태그</option>
+                                <option>작성자</option>
+                                <option>작성일시</option>
+                            </select></div>
+                            <div class="col-lg-8 col-md-6 col-sm-12 p-0"><input type="text" placeholder="Search..."
+                                                                                class="form-control" id="search"
+                                                                                name="검색..."></div>
+                            <div class="col-lg-1 col-md-3 col-sm-12 p-0">
+                                <button type="submit" class="btn btn-base">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                         stroke-linejoin="round" class="feather feather-search">
+                                        <circle cx="11" cy="11" r="8"></circle>
+                                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- main -->
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+    <hr>
+    <div class="bootstrap snippets bootdey">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="main-box no-header clearfix">
+                    <div class="main-box-body clearfix">
+                        <div class="table-responsive">
+                            <table class="table user-list">
+                                <thead>
+                                <tr>
+                                    <th class="col-7">제목</th>
+                                    <th class="text-center">해시태그</th>
+                                    <th>작성자</th>
+                                    <th>작성일시</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>
+                                        <span class="user-subhead">Member</span>
+                                    </td>
+                                    <td class="text-center">
+                                        <span class="label label-default">pending</span>
+                                    </td>
+                                    <td>
+                                        <a href="#">dagh1218@naver.com</a>
+                                    </td>
+                                    <td>2022/08/12</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <table>
-        <thead>
-        <tr>
-            <th>제목</th>
-            <th>해시태그</th>
-            <th>작성자</th>
-            <th>작성일시</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>첫 글</td>
-            <td>#첫글</td>
-            <td>kyeongho</td>
-            <td>2022-01-01</td>
-        </tr>
-        <tr>
-            <td>두 글</td>
-            <td>#첫글</td>
-            <td>kyeongho</td>
-            <td>2022-01-01</td>
-        </tr>
-        <tr>
-            <td>세 글</td>
-            <td>#첫글</td>
-            <td>kyeongho</td>
-            <td>2022-01-03</td>
-        </tr>
-        </tbody>
-    </table>
-
-    <nav>
-        <table>
-            <tbody>
-            <tr>
-                <td>prev</td>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>next</td>
-            </tr>
-            </tbody>
-        </table>
+    <!-- pagination -->
+    <nav class="d-flex justify-content-center">
+        <ul class="pagination pagination-base pagination-boxed pagination-square mb-0">
+            <li class="page-item">
+                <a class="page-link no-border" href="#">
+                    <span aria-hidden="true">«</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item active"><a class="page-link no-border" href="#">1</a></li>
+            <li class="page-item"><a class="page-link no-border" href="#">2</a></li>
+            <li class="page-item"><a class="page-link no-border" href="#">3</a></li>
+            <li class="page-item"><a class="page-link no-border" href="#">4</a></li>
+            <li class="page-item">
+                <a class="page-link no-border" href="#">
+                    <span aria-hidden="true">»</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
     </nav>
 </main>
 <footer id="footer"></footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
 </html>
