--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -1,64 +1,85 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>게시판 페이지</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>게시글</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="/css/article-detail.css" rel="stylesheet">
 </head>
-<body>
+<body class="container">
 <header id="header"></header>
 <header>
     <h1>게시글 제목</h1>
 </header>
-<section>
-    <p>게시자</p>
-    <p>게시날짜</p>
-    <p>해시태그</p>
-</section>
 
-<article>
-    <div>
-        <p>본문</p>
-    </div>
-    <div>
-        <form>
-            <label>
-                <textarea placeholder="댓글 쓰기..."></textarea>
-            </label>
-            <button type="submit">쓰기</button>
-        </form>
-    </div>
-    <div>
-        <ul>
-            <li>
-                <div>
-                    <time>2022-01-01</time>
-                    <strong>kyeongho2</strong>
-                    <p>댓글 1</p>
+<!-- Main content -->
+<article class="row">
+    <!-- Left side -->
+    <div class="col-lg-8">
+        <!-- Basic information -->
+        <div class="card mb-4">
+            <div class="card-body">
+                <h3 class="h6">본문</h3>
+                <textarea class="form-control form-control-lg" rows="10" placeholder="본문" readonly></textarea>
+            </div>
+        </div>
+        <!-- Address -->
+        <div class="card mb-4">
+            <div class="card-body">
+                <h3 class="h6 mb-4">댓글</h3>
+                <div class="mb-3">
+                    <label class="form-label">
+                        <time>2022-01-01</time>
+                        <strong>kyeongho2</strong>
+                    </label>
+                    <input type="text" class="form-control" placeholder="댓글1" readonly>
                 </div>
-            </li>
-            <li>
-                <div>
-                    <time>2022-01-01</time>
-                    <strong>kyeongho2</strong>
-                    <p>댓글 2</p>
+                <div class="mb-3">
+                    <label class="form-label">
+                        <time>2022-01-01</time>
+                        <strong>kyeongho2</strong>
+                    </label>
+                    <input type="text" class="form-control" placeholder="댓글2" readonly>
                 </div>
-            </li>
-            <li>
-                <div>
-                    <time>2022-01-04</time>
-                    <strong>kyeongho2</strong>
-                    <p>댓글 3</p>
-                </div>
-            </li>
-        </ul>
+            </div>
+        </div>
     </div>
+    <aside class="col-lg-4">
+        <div class="card mb-4">
+            <div class="card-body">
+                <ul class="list-group list-group-flush mx-n2">
+                    <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <h6 class="mb-0">작성자</h6>
+                            <p class="mb-0">Manager</p>
+                        </div>
+                    </li>
+                    <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <h6 class="mb-0">작성 시각</h6>
+                            <h6 class="mb-0"><time>2022-01-01</time></h6>
+                        </div>
+                    </li>
+                    <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <h6 class="mb-0">해시태그</h6>
+                            <h6 class="mb-0">#데모</h6>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </aside>
     <nav>
-        <a href="#">이전 글</a>
-        <a href="#">다음 글</a>
+        <div class="hstack gap-3">
+            <button class="btn btn-light btn-sm btn-icon-text"><i class="bi bi-x"></i> <span class="text">이전 글</span>
+            </button>
+            <button class="btn btn-primary btn-sm btn-icon-text"><i class="bi bi-x"></i> <span class="text">다음 글</span>
+            </button>
+        </div>
     </nav>
 </article>
-
-
 
 <footer id="footer"></footer>
 
