simple-board-project #17 view 내에 실제 데이터 주입
- controller내 model을 통해 주입된 데이터 사용

--- a/simple-board/src/main/resources/templates/article/index.html
+++ b/simple-board/src/main/resources/templates/article/index.html
@@ -55,27 +55,29 @@
                 <div class="main-box no-header clearfix">
                     <div class="main-box-body clearfix">
                         <div class="table-responsive">
-                            <table class="table user-list">
+                            <table id="article-table" class="table user-list">
                                 <thead>
                                 <tr>
-                                    <th class="col-7">제목</th>
-                                    <th class="text-center">해시태그</th>
-                                    <th>작성자</th>
-                                    <th>작성일시</th>
+                                    <th class="article-title col-7">제목</th>
+                                    <th class="article-hashtag text-center">해시태그</th>
+                                    <th class="article-creator">작성자</th>
+                                    <th class="article-create-time">작성일시</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td>
-                                        <span class="user-subhead">Member</span>
+                                    <td class="article-title user-subhead">
+                                        <a>Member</a>
                                     </td>
-                                    <td class="text-center">
-                                        <span class="label label-default">pending</span>
+                                    <td class="article-hashtag text-center label label-default">
+                                        #pending
                                     </td>
-                                    <td>
+                                    <td class="article-creator">
                                         <a href="#">dagh1218@naver.com</a>
                                     </td>
-                                    <td>2022/08/12</td>
+                                    <td class="article-create-time">
+                                        <time>2022/08/12</time>
+                                    </td>
                                 </tr>
                                 </tbody>
                             </table>
