--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -10,7 +10,7 @@
 <body class="container">
 <header id="header"></header>
 <header>
-    <h1>게시글 제목</h1>
+    <h1 id="article-title">게시글 제목</h1>
 </header>
 
 <!-- Main content -->
@@ -21,27 +21,25 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h3 class="h6">본문</h3>
-                <textarea class="form-control form-control-lg" rows="10" placeholder="본문" readonly></textarea>
+                <textarea id="article-content" class="form-control form-control-lg" rows="10" placeholder="본문"
+                          readonly></textarea>
             </div>
         </div>
         <!-- Address -->
         <div class="card mb-4">
             <div class="card-body">
                 <h3 class="h6 mb-4">댓글</h3>
-                <div class="mb-3">
+                <div id="comment-list" class="mb-3">
                     <label class="form-label">
-                        <time>2022-01-01</time>
-                        <strong>kyeongho2</strong>
+                        <strong class="comment-creator">kyeongho2</strong>
+                        <time class="comment-create-time">2022-01-01</time>
                     </label>
-                    <input type="text" class="form-control" placeholder="댓글1" readonly>
+                    <p class="comment-content">댓글</p>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label">
-                        <time>2022-01-01</time>
-                        <strong>kyeongho2</strong>
-                    </label>
-                    <input type="text" class="form-control" placeholder="댓글2" readonly>
-                </div>
+            </div>
+            <div class="card-body">
+                <input type="text" class="form-control" placeholder="댓글1" />
+                <button class="btn btn-light btn-sm btn-icon-text"><i class="bi bi-x"></i> <span class="text">쓰기</span></button>
             </div>
         </div>
     </div>
@@ -52,19 +50,21 @@
                     <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
                             <h6 class="mb-0">작성자</h6>
-                            <p class="mb-0">Manager</p>
+                            <p id="article-creator" class="mb-0">Manager</p>
                         </div>
                     </li>
                     <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
                             <h6 class="mb-0">작성 시각</h6>
-                            <h6 class="mb-0"><time>2022-01-01</time></h6>
+                            <h6 class="mb-0">
+                                <time id="article-create-time">2022-01-01</time>
+                            </h6>
                         </div>
                     </li>
                     <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
                             <h6 class="mb-0">해시태그</h6>
-                            <h6 class="mb-0">#데모</h6>
+                            <h6 id="article-hashtag" class="mb-0">#데모</h6>
                         </div>
                     </li>
                 </ul>
