#23 게시글 페이지 내 이전/다음 버튼 구현
- 이전 / 이후 버튼 클릭 시 article id 기반 이전, 이후 게시글로 이동하도록 구현

--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -73,9 +73,9 @@
     </aside>
     <nav>
         <div class="hstack gap-3">
-            <button class="btn btn-light btn-sm btn-icon-text"><i class="bi bi-x"></i> <span class="text">이전 글</span>
+            <button class="btn btn-light btn-sm btn-icon-text" href="#"><i class="bi bi-x"></i><span class="text"><a id="prev-article" href="#" style="color: black;text-decoration: none">이전 글</a></span>
             </button>
-            <button class="btn btn-primary btn-sm btn-icon-text"><i class="bi bi-x"></i> <span class="text">다음 글</span>
+            <button class="btn btn-primary btn-sm btn-icon-text" href="#"><i class="bi bi-x"></i><span class="text"><a id="next-article" href="#" style="color: white;text-decoration: none">다음 글</a></span>
             </button>
         </div>
     </nav>
