--- a/simple-board/src/main/resources/templates/article/index.html
+++ b/simple-board/src/main/resources/templates/article/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="/css/article-index.css" rel="stylesheet"/>
+    <link href="/css/article-index-header.css" rel="stylesheet"/>
 </head>
 <body class="container">
 <header id="header"></header>
@@ -58,10 +59,10 @@
                             <table id="article-table" class="table user-list">
                                 <thead>
                                 <tr>
-                                    <th class="article-title col-7">제목</th>
-                                    <th class="article-hashtag text-center">해시태그</th>
-                                    <th class="article-creator">작성자</th>
-                                    <th class="article-create-time">작성일시</th>
+                                    <th class="article-title col-7"><a href="#">제목</a></th>
+                                    <th class="article-hashtag text-center"><a href="#">해시태그</a></th>
+                                    <th class="article-creator"><a href="#">작성자</a></th>
+                                    <th class="article-create-time"><a href="#">작성일시</a></th>
                                 </tr>
                                 </thead>
                                 <tbody>
