#27 검색바 기능 연동
- 검색바 기능 연동
- 페이징바, 정렬 기능에 검색 타입에 대한 값 추가

--- a/simple-board/src/main/resources/templates/article/index.html
+++ b/simple-board/src/main/resources/templates/article/index.html
@@ -21,7 +21,8 @@
                     <div class="col-12">
                         <div class="row no-gutters">
                             <div class="col-lg-3 col-md-3 col-sm-12 p-0"><select class="form-control"
-                                                                                 id="exampleFormControlSelect1">
+                                                                                 id="exampleFormControlSelect1"
+                                                                                 name="articleSearchType">
                                 <option>제목</option>
                                 <option>본문</option>
                                 <option>해시태그</option>
@@ -30,7 +31,7 @@
                             </select></div>
                             <div class="col-lg-8 col-md-6 col-sm-12 p-0"><input type="text" placeholder="Search..."
                                                                                 class="form-control" id="search"
-                                                                                name="검색..."></div>
+                                                                                name="searchValue"></div>
                             <div class="col-lg-1 col-md-3 col-sm-12 p-0">
                                 <button type="submit" class="btn btn-base">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
