--- a/simple-board/src/main/resources/templates/header.html
+++ b/simple-board/src/main/resources/templates/header.html
@@ -13,9 +13,8 @@
         </a>
 
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+            <li class="nav-item"><a id="home" href="#" class="nav-link" aria-current="page">Home</a></li>
+            <li class="nav-item"><a id="hashtags" href="#" class="nav-link">Hashtags</a></li>
             <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
         </ul>
