--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <title>게시글</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -65,6 +66,12 @@
                         <div class="ms-2 me-auto">
                             <h6 class="mb-0">해시태그</h6>
                             <h6 id="article-hashtag" class="mb-0">#데모</h6>
+                        </div>
+                    </li>
+                    <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <button class="btn btn-primary btn-sm btn-icon-text" href="#"><i class="bi bi-x"></i><span class="text"><a id="article-update-view" href="#" style="color: white;text-decoration: none">게시글 수정</a></span>
+                            </button>
                         </div>
                     </li>
                 </ul>
