--- a/simple-board/src/main/resources/templates/article/form.html
+++ b/simple-board/src/main/resources/templates/article/form.html
@@ -26,35 +26,8 @@
                               placeholder="본문" name="content"></textarea>
                 </div>
             </div>
+            <input type="text" id="article-hashtag" class="form-control" value="해시태그" name="hashtag"/>
         </div>
-        <aside class="col-lg-4">
-            <div class="card mb-4">
-                <div class="card-body">
-                    <ul class="list-group list-group-flush mx-n2">
-                        <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
-                            <div class="ms-2 me-auto">
-                                <h6 class="mb-0">작성자</h6>
-                                <p id="article-creator" class="mb-0">Manager</p>
-                            </div>
-                        </li>
-                        <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
-                            <div class="ms-2 me-auto">
-                                <h6 class="mb-0">작성 시각</h6>
-                                <h6 class="mb-0">
-                                    <time id="article-create-time">2022-01-01</time>
-                                </h6>
-                            </div>
-                        </li>
-                        <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
-                            <div class="ms-2 me-auto">
-                                <h6 class="mb-0">해시태그</h6>
-                                <h6 id="article-hashtag" class="mb-0">#데모</h6>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </aside>
     </article>
     <nav>
         <div class="hstack gap-3">
