#30 게시글 생성 페이지와 수정 페이지 공유를 위해 일부 요소 수정
- FormType을 통해 수정 요청 및 생성 요청 분리
- article 모델 유무에 따른 value 판단 추가

--- a/simple-board/src/main/resources/templates/article/form.html
+++ b/simple-board/src/main/resources/templates/article/form.html
@@ -16,8 +16,8 @@
     <article class="row">
         <!-- Left side -->
         <div class="col-lg-8">
-            <input type="hidden" id="article-id" name="id" />
-            <input type="text" id="article-title" class="form-control" value="게시글 제목" name="title"/>
+            <input type="hidden" id="article-id" name="id" value="id" />
+            <input type="text" id="article-title" class="form-control" placeholder="게시글 제목" name="title"/>
             <!-- Basic information -->
             <div class="card mb-4">
                 <div class="card-body">
@@ -26,7 +26,7 @@
                               placeholder="본문" name="content"></textarea>
                 </div>
             </div>
-            <input type="text" id="article-hashtag" class="form-control" value="해시태그" name="hashtag"/>
+            <input type="text" id="article-hashtag" class="form-control" placeholder="해시태그" name="hashtag"/>
         </div>
     </article>
     <nav>
