--- a/simple-board/src/main/resources/templates/article/index.html
+++ b/simple-board/src/main/resources/templates/article/index.html
@@ -90,6 +90,9 @@
         </div>
     </div>
 
+    <div class="d-flex justify-content-end">
+        <button class="btn btn-primary btn-sm btn-icon-text"><a id="article-create-button" class="page-link no-border" href="#">게시글 쓰기</a></button>
+    </div>
     <!-- pagination -->
     <nav id="article-pagination-bar" class="d-flex justify-content-center">
         <ul class="pagination pagination-base pagination-boxed pagination-square mb-0">
