--- a/simple-board/src/main/resources/templates/article/form.html
+++ b/simple-board/src/main/resources/templates/article/form.html
@@ -16,7 +16,7 @@
     <article class="row">
         <!-- Left side -->
         <div class="col-lg-8">
-            <input type="hidden" id="article-id" name="id" value="id" />
+            <input type="hidden" id="article-id" name="id" />
             <input type="text" id="article-title" class="form-control" placeholder="게시글 제목" name="title"/>
             <!-- Basic information -->
             <div class="card mb-4">
