#30 게시글 상세 페이지 뷰에서 삭제 요청 버튼 추가
- 게시글 상세 페이지 뷰에서 삭제 요청 버튼 추가

--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -73,6 +73,9 @@
                             <button class="btn btn-primary btn-sm btn-icon-text" href="#"><i class="bi bi-x"></i><span class="text"><a id="article-update-view" href="#" style="color: white;text-decoration: none">게시글 수정</a></span>
                             </button>
                         </div>
+                        <form id="article-delete-form">
+                            <button type="submit" class="btn btn-danger btn-sm btn-icon-text">게시글 삭제</button>
+                        </form>
                     </li>
                 </ul>
             </div>
