#34 게시판 페이지 내 접근 권한에 따른 UI 처리
- login , logout 상태에 따라 login/logout 버튼 활성화 처리
- login 시에만 게시글 작성 버튼 활성화되도록 수정
- 권한이 있는 사용자만 게시글 수정, 삭제, 댓글 삭제 버튼 활성화되도록 수정

--- a/simple-board/src/main/resources/templates/header.th.xml
+++ b/simple-board/src/main/resources/templates/header.th.xml
@@ -2,4 +2,6 @@
 <thlogic>
     <attr sel="#home" th:href="@{/}" />
     <attr sel="#hashtags" th:href="@{/article/search-hashtag}" />
+    <attr sel="#login-url" th:href="@{/login}" sec:authorize="!isAuthenticated()"/>
+    <attr sel="#logout-url" th:href="@{/logout}" sec:authorize="isAuthenticated()" />
 </thlogic>
