--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -75,10 +75,10 @@
                             <h6 id="article-hashtag" class="mb-0">#데모</h6>
                         </div>
                     </li>
-                    <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-                            <button class="btn btn-primary btn-sm btn-icon-text" href="#"><i class="bi bi-x"></i><span
-                                    class="text"><a id="article-update-view" href="#"
+                    <li id="article-control-li" class="list-group-item px-0 d-flex justify-content-between align-items-start">
+                        <div id="article-update-view" class="ms-2 me-auto">
+                            <button class="btn btn-primary btn-sm btn-icon-text"><i class="bi bi-x"></i><span
+                                    class="text"><a href="#"
                                                     style="color: white;text-decoration: none">게시글 수정</a></span>
                             </button>
                         </div>
