--- a/simple-board/src/main/resources/templates/header.html
+++ b/simple-board/src/main/resources/templates/header.html
@@ -15,8 +15,8 @@
         <ul class="nav nav-pills">
             <li class="nav-item"><a id="home" href="#" class="nav-link" aria-current="page">Home</a></li>
             <li class="nav-item"><a id="hashtags" href="#" class="nav-link">Hashtags</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a id="login-url" href="#" class="nav-link">Login</a></li>
+            <li class="nav-item"><a id="logout-url" href="#" class="nav-link">Logout</a></li>
         </ul>
     </header>
 </header>
