#45 해시태그 관련 요소 추가에 따른 페이지 요소 변경
- 해시태그 직접 입력하는 폼 제거
- 해시태그 스타일링 적용
- 해시태그 클릭 시 해당 해시태그 검색 리스트로 이동
- hastagDto 리팩토링
- 뷰페이지 모델 변경에 따른 Response 객체들 리팩토링

--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -72,7 +72,9 @@
                     <li class="list-group-item px-0 d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
                             <h6 class="mb-0">해시태그</h6>
-                            <h6 id="article-hashtag" class="mb-0">#데모</h6>
+                            <div id="article-hashtags" class="card-body">
+                                <span class="badge text-bg-secondary bg-soft-info mx-1">#pending</span>
+                            </div>
                         </div>
                     </li>
                     <li id="article-control-li" class="list-group-item px-0 d-flex justify-content-between align-items-start">
