--- a/simple-board/src/main/resources/templates/article/index.html
+++ b/simple-board/src/main/resources/templates/article/index.html
@@ -71,8 +71,8 @@
                                     <td class="article-title user-subhead">
                                         <a>Member</a>
                                     </td>
-                                    <td class="article-hashtag text-center label label-default">
-                                        #pending
+                                    <td class="article-hashtags text-center label label-default">
+                                        <span class="badge text-bg-secondary bg-soft-info mx-1"><a class="text-reset" href="#">#pending</a></span>
                                     </td>
                                     <td class="article-creator">
                                         <a href="#">dagh1218@naver.com</a>
