--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -30,20 +30,46 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h3 class="h6 mb-4">댓글</h3>
-                <div id="comment-list" class="mb-3">
-                    <label class="form-label d-flex">
-                        <strong class="comment-creator">kyeongho2</strong>
-                        <time class="comment-create-time">2022-01-01</time>
-                        <form id="comment-delete-form" class="justify-content-end">
-                            <input type="hidden" class="article-id" name="articleId"/>
-                            <button type="submit" class="btn btn-danger px-1 py-0">X</button>
-                        </form>
-                    </label>
-                    <p class="comment-content">댓글</p>
-                </div>
+                <ul id="comment-list" class="mb-3">
+                    <li class="parent-comment">
+                        <div class="form-label d-flex">
+                            <strong>kyeongho2</strong>
+                            <time>2022-01-01</time>
+                            <form class="comment-delete-form justify-content-end">
+                                <input type="hidden" class="article-id" name="articleId"/>
+                                <button type="submit" class="btn btn-danger px-1 py-0">X</button>
+                            </form>
+                        </div>
+                        <p>댓글</p>
+                        <ul class="mb-3">
+                            <li class="child-comment">
+                                <div class="form-label d-flex">
+                                    <strong>kyeongho2</strong>
+                                    <time>2022-01-01</time>
+                                    <form class="comment-delete-form justify-content-end">
+                                        <input type="hidden" class="article-id" name="articleId"/>
+                                        <button type="submit" class="btn btn-danger px-1 py-0">X</button>
+                                    </form>
+                                </div>
+                                <p>대댓글</p>
+                            </li>
+                        </ul>
+                        <div class="row">
+                            <details class="col-md-10 col-lg-9 mb-4">
+                                <summary>댓글달기</summary>
+                                <form class="comment-form">
+                                    <input type="hidden" class="article-id" name="articleId"/>
+                                    <input type="hidden" class="parent-comment-id" name="parentCommentId">
+                                    <input type="text" class="form-control" placeholder="댓글" name="content"/>
+                                    <button class="btn btn-light btn-sm btn-icon-text">쓰기</button>
+                                </form>
+                            </details>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <div class="card-body">
-                <form id="comment-form">
+                <form class="comment-form">
                     <input type="hidden" class="article-id" name="articleId"/>
                     <input type="text" class="form-control" placeholder="댓글" name="content"/>
                     <button class="btn btn-light btn-sm btn-icon-text">쓰기</button>
@@ -77,7 +103,8 @@
                             </div>
                         </div>
                     </li>
-                    <li id="article-control-li" class="list-group-item px-0 d-flex justify-content-between align-items-start">
+                    <li id="article-control-li"
+                        class="list-group-item px-0 d-flex justify-content-between align-items-start">
                         <div id="article-update-view" class="ms-2 me-auto">
                             <button class="btn btn-primary btn-sm btn-icon-text"><i class="bi bi-x"></i><span
                                     class="text"><a href="#"
