--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -30,8 +30,8 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h3 class="h6 mb-4">댓글</h3>
-                <ul id="comment-list" class="mb-3">
-                    <li class="parent-comment">
+                <ul class="article-comments mb-3">
+                    <li class="article-comment mb-3">
                         <div class="form-label d-flex">
                             <strong>kyeongho2</strong>
                             <time>2022-01-01</time>
@@ -41,19 +41,7 @@
                             </form>
                         </div>
                         <p>댓글</p>
-                        <ul class="mb-3">
-                            <li class="child-comment">
-                                <div class="form-label d-flex">
-                                    <strong>kyeongho2</strong>
-                                    <time>2022-01-01</time>
-                                    <form class="comment-delete-form justify-content-end">
-                                        <input type="hidden" class="article-id" name="articleId"/>
-                                        <button type="submit" class="btn btn-danger px-1 py-0">X</button>
-                                    </form>
-                                </div>
-                                <p>대댓글</p>
-                            </li>
-                        </ul>
+                        <ul class="child-comments mb-3"/>
                         <div class="row">
                             <details class="col-md-10 col-lg-9 mb-4">
                                 <summary>댓글달기</summary>
