#53 카카오 로그인 뷰 구현
- 카카오 로그인 버튼 추가 및 spring security oauth2 관련 로그인 링크 추가
-- spring-security-oauth2 설정 중 restration 내 authorization-grant-type을 low-case 로 변경
--- upper 로는 인식 안되는 오류 있음

--- a/simple-board/src/main/resources/templates/header.th.xml
+++ b/simple-board/src/main/resources/templates/header.th.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <thlogic>
-    <attr sel="#home" th:href="@{/}" />
-    <attr sel="#hashtags" th:href="@{/article/search-hashtag}" />
+    <attr sel="#home" th:href="@{/}"/>
+    <attr sel="#hashtags" th:href="@{/article/search-hashtag}"/>
     <attr sel="#login-url" th:href="@{/login}" sec:authorize="!isAuthenticated()"/>
-    <attr sel="#logout-url" th:href="@{/logout}" sec:authorize="isAuthenticated()" />
+    <attr sel="#kakao-login-url" th:href="@{/oauth2/authorization/kakao}" sec:authorize="!isAuthenticated()"/>
+    <attr sel="#logout-url" th:href="@{/logout}" sec:authorize="isAuthenticated()"/>
 </thlogic>
