--- a/simple-board/src/main/resources/templates/header.html
+++ b/simple-board/src/main/resources/templates/header.html
@@ -16,6 +16,9 @@
             <li class="nav-item"><a id="home" href="#" class="nav-link" aria-current="page">Home</a></li>
             <li class="nav-item"><a id="hashtags" href="#" class="nav-link">Hashtags</a></li>
             <li class="nav-item"><a id="login-url" href="#" class="nav-link">Login</a></li>
+            <li class="nav-item"><a id="kakao-login-url" href="#" class="nav-link">
+                <img alt="kakao login" src="/images/kakao_login_small.png"/>
+            </a></li>
             <li class="nav-item"><a id="logout-url" href="#" class="nav-link">Logout</a></li>
         </ul>
     </header>
