#61 대댓글 삭제 에러 수정
- thyemleaf 템플릿 지정 시 상위 댓글에서 삽입된 일부 데이터 (th:method=delete) 등이 섞이면서 대댓글의 경우 method 속성에 직접적으로 delete가 들어가게됨, 기본적으로는 post/get만 받을 수 있기에 에러 발생
-- 그에 따른 수정으로 대댓글 삭제 form을 별도 지정하도록 class 분리
- 추가적으로 일부 겹치는 컴포넌트 개선

--- a/simple-board/src/main/resources/templates/article/detail.html
+++ b/simple-board/src/main/resources/templates/article/detail.html
@@ -34,7 +34,7 @@
                     <li class="parent-comment">
                         <div class="form-label d-flex">
                             <strong>kyeongho2</strong>
-                            <time>2022-01-01</time>
+                            <time class="ms-2">2022-01-01</time>
                             <form class="comment-delete-form justify-content-end">
                                 <input type="hidden" class="article-id" name="articleId"/>
                                 <button type="submit" class="btn btn-danger px-1 py-0">X</button>
@@ -45,8 +45,8 @@
                             <li class="child-comment">
                                 <div class="form-label d-flex">
                                     <strong>kyeongho2</strong>
-                                    <time>2022-01-01</time>
-                                    <form class="comment-delete-form justify-content-end">
+                                    <time class="ms-2">2022-01-01</time>
+                                    <form class="child-comment-delete-form justify-content-end">
                                         <input type="hidden" class="article-id" name="articleId"/>
                                         <button type="submit" class="btn btn-danger px-1 py-0">X</button>
                                     </form>
@@ -60,7 +60,7 @@
                                 <form class="comment-form">
                                     <input type="hidden" class="article-id" name="articleId"/>
                                     <input type="hidden" class="parent-comment-id" name="parentCommentId">
-                                    <input type="text" class="form-control" placeholder="댓글" name="content"/>
+                                    <input type="text" class="form-control mb-2" placeholder="댓글" name="content"/>
                                     <button class="btn btn-light btn-sm btn-icon-text">쓰기</button>
                                 </form>
                             </details>
@@ -71,7 +71,7 @@
             <div class="card-body">
                 <form class="comment-form">
                     <input type="hidden" class="article-id" name="articleId"/>
-                    <input type="text" class="form-control" placeholder="댓글" name="content"/>
+                    <input type="text" class="form-control mb-2" placeholder="댓글" name="content"/>
                     <button class="btn btn-light btn-sm btn-icon-text">쓰기</button>
                 </form>
             </div>
